--- a/TIW-PlaylistMusicale/src/main/webapp/WEB-INF/Player.html
+++ b/TIW-PlaylistMusicale/src/main/webapp/WEB-INF/Player.html
@@ -7,13 +7,12 @@
 <body>
     <h1>Song Details</h1>
     <h2 th:text="${song.title}"></h2>
-    <img th:src="${song.albumImage}" />
+    <img th:src="${album.image}" />
     <!-- Display other details of the song such as artist, album, year, genre, etc. -->
-    <p>Artist: <span th:text="${song.artist}"></span></p>
-    <p>Album: <span th:text="${song.album}"></span></p>
-    <p>Year: <span th:text="${song.year}"></span></p>
-    <p>Genre: <span th:text="${song.genre}"></span></p>
+    <p>Artist: <span th:text="${album.interpreter}"></span></p>
+    <p>Album: <span th:text="${album.title}"></span></p>
+    <p>Year: <span th:text="${album.publicationYear}"></span></p>
     <!-- Add an audio player for song playback -->
-    <audio th:src="${song.audioFile}" controls></audio>
+    <audio th:src="${song.audio}" controls></audio>
 </body>
 </html>
