Login page update

--- a/TIW-PlaylistMusicale/src/main/webapp/WEB-INF/Login.html
+++ b/TIW-PlaylistMusicale/src/main/webapp/WEB-INF/Login.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Login Page</title>
+    <title>Authentication page</title>
 </head>
 <body>
-	<h1>Login Page</h1>
+	<h1>Authentication page</h1>
 	<div>
+		<h1>Sign-in module</h1>
 		<label for="username">Insert username:</label><br>
         <input type="text" id="username" name="username"><br>
         <label for="password">Insert password:</label><br>
+        <input type="password" id="password" name="password"><br>
+	</div>
+	<div>
+		<h1>Sign-up module</h1>
+		<label for="username">Select username:</label><br>
+        <input type="text" id="username" name="username"><br>
+        <label for="password">Select password:</label><br>
         <input type="password" id="password" name="password"><br>
 	</div>
 </body>
