--- a/TIW-PlaylistMusicale/src/main/webapp/WEB-INF/Player.html
+++ b/TIW-PlaylistMusicale/src/main/webapp/WEB-INF/Player.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Song</title>
+    <title>Player</title>
     <!-- Add your CSS and JavaScript files here -->
 </head>
 <body>
