Start userDAO and minor changes

--- a/TIW-PlaylistMusicale/src/main/webapp/WEB-INF/Home.html
+++ b/TIW-PlaylistMusicale/src/main/webapp/WEB-INF/Home.html
@@ -66,9 +66,9 @@
      </ul>
   </form><br> -->
      <form action="@{/playlist/add}" method="post">
-     <label for="input_title_playlist">Enter title of playlist:</label>
-     <input type="text" id="input_title_playlist" name="playlist_title">
-     <input type="submit" value="Add playlist">
+     <label for="input_title_playlist">Enter title of playlist:</label><br>
+     <input type="text" id="input_title_playlist" name="playlist_title"><br>
+     <input type="submit" value="Add playlist"><br>
     </form>
 </body>
 </html>
