--- a/TIW-PlaylistMusicale/src/main/webapp/WEB-INF/Login.html
+++ b/TIW-PlaylistMusicale/src/main/webapp/WEB-INF/Login.html
@@ -11,6 +11,7 @@
         <input type="text" id="username" name="username"><br>
         <label for="password">Insert password:</label><br>
         <input type="password" id="password" name="password"><br>
+        <input type="submit" value="Sign in"><br>
 	</div>
 	<div>
 		<h1>Sign-up module</h1>
@@ -18,6 +19,7 @@
         <input type="text" id="username" name="username"><br>
         <label for="password">Select password:</label><br>
         <input type="password" id="password" name="password"><br>
+		<input type="submit" value="Sign up"><br>
 	</div>
 </body>
 </html>
