Correction of userDAO position, correction of web.xml

--- a/TIW-PlaylistMusicale/src/main/webapp/WEB-INF/Login.html
+++ b/TIW-PlaylistMusicale/src/main/webapp/WEB-INF/Login.html
@@ -5,16 +5,16 @@
 </head>
 <body>
 	<h1>Authentication page</h1>
-	<div>
-		<h1>Sign-in module</h1>
+	<div class="formdiv">
+		<h2>Sign-in module</h2>
 		<label for="username">Insert username:</label><br>
         <input type="text" id="username" name="username"><br>
         <label for="password">Insert password:</label><br>
         <input type="password" id="password" name="password"><br>
         <input type="submit" value="Sign in"><br>
 	</div>
-	<div>
-		<h1>Sign-up module</h1>
+	<div class="formdiv">
+		<h2>Sign-up module</h2>
 		<label for="username">Select username:</label><br>
         <input type="text" id="username" name="username"><br>
         <label for="password">Select password:</label><br>
