--- a/TIW-PlaylistMusicale/src/main/webapp/WEB-INF/HomeJS.html
+++ b/TIW-PlaylistMusicale/src/main/webapp/WEB-INF/HomeJS.html
@@ -15,38 +15,29 @@
 			    <table>
 					<tbody>
 					  <tr>
-					    <td th:each="entry : ${playlistSongsWithAlbum}"></td>
-					  </tr>
-					  <tr>
-					    <td th:each="entry, iter : ${playlistSongsWithAlbum}">
-					      <div th:if="${iter.index >= 5}" hidden>
-					        <input type="checkbox" name="songIds" th:value="${entry.key.id}"/>
-					        <label for="songIds">
-					          <a th:href="@{/GoToPlayer(songId=${songId})}" th:text="${entry.key.title}"></a>
-					        </label>
-					        <img th:src="${entry.value.image}" th:alt="${entry.value.title}">
-					      </div>
-					      <div th:if="${iter.index < 5}">
-					        <input type="checkbox" name="songIds" th:value="${entry.key.id}"/>
-					        <label for="songIds">
-					          <a th:href="@{/GoToPlayer(songId=${songId})}" th:text="${entry.key.title}"></a>
-					        </label>
-					        <img th:src="${entry.value.image}" th:alt="${entry.value.title}">
-					      </div>
-					    </td>
+						<th:block th:each="entry, iter : ${playlistSongsWithAlbum}">
+						  <td  class="playlistSong" hidden>
+						      <div>
+						        <input type="checkbox" name="songIds" th:value="${entry.key.id}"/>
+						        <label for="songIds">
+						          <a th:href="@{/GoToPlayer(songId=${songId})}" th:text="${entry.key.title}"></a>
+						        </label>
+						      </div>
+						      <img loading="lazy" th:src="${entry.value.image}" th:alt="${entry.value.title}">
+						  </td>
+						</th:block>
 					  </tr>
 					</tbody>
 			    </table>
 			    <button type="submit">Remove selected songs</button>
-			    
-				<div>
-			        <a>Previous</a>
-			    </div>
-			
-			    <div>
-			        <a>Next</a>
-			    </div>
 			</form>
+			<div id="previousPlaylistButton">
+		        <a>Previous</a>
+		    </div>
+			
+			<div id="nextPlaylistButton">
+		        <a>Next</a>
+		    </div>
 		</div>
 	
 	    <h2>Add Song to Playlist</h2>
@@ -69,23 +60,8 @@
 	<div>
 		<!-- Iterate through each song in the playlist -->
 		<div th:each="entry, iter : ${playlistSongsWithAlbum}">
-		    <!-- Only display the first song element -->
-		    <div th:if="${iter.index == 0}">
-		        <h1>Song Details</h1>
-		        <!-- Extract the Song and Album from the Map entry -->
-		        <th:block th:with="song=${entry.key}, album=${entry.value}">
-		            <h2 th:text="${song.title}"></h2>
-		            <img th:src="${album.image}" />
-		            <!-- Display other details of the song such as artist, album, year, genre, etc. -->
-		            <p>Artist: <span th:text="${album.interpreter}"></span></p>
-		            <p>Album: <span th:text="${album.title}"></span></p>
-		            <p>Year: <span th:text="${album.publicationYear}"></span></p>
-		            <!-- Add an audio player for song playback -->
-		            <audio th:src="${song.audio}" controls></audio>
-		        </th:block>
-		    </div>
 		    <!-- Hide all other song elements -->
-		    <div th:if="${iter.index > 0}" hidden>
+		    <div class = "playerSong" hidden>
 		        <h1>Song Details</h1>
 		        <!-- Extract the Song and Album from the Map entry -->
 		        <th:block th:with="song=${entry.key}, album=${entry.value}">
@@ -96,10 +72,18 @@
 		            <p>Album: <span th:text="${album.title}"></span></p>
 		            <p>Year: <span th:text="${album.publicationYear}"></span></p>
 		            <!-- Add an audio player for song playback -->
-		            <audio th:src="${song.audio}" controls></audio>
+		            <audio preload="none" th:src="${song.audio}" controls></audio>
 		        </th:block>
 		    </div>
 		</div>
+		<div id="previousSongButton">
+		    <a>Previous</a>
+		</div>
+			
+		<div id="nextSongButton">
+		   <a>Next</a>
+		</div>
 	</div>
 </body>
+<script th:src="@{/static/js/HomeJS.js}"></script>
 </html>
