GetPlaylist working, need to work on the js

--- a/TIW-PlaylistMusicale/src/main/webapp/WEB-INF/HomeJS.html
+++ b/TIW-PlaylistMusicale/src/main/webapp/WEB-INF/HomeJS.html
@@ -41,7 +41,7 @@
 		</div>
 	
 	    <h2>Add Song to Playlist</h2>
-		<form method="post" th:action="@{/AddSongsToPlaylist(playlistId=${playlistId})}">
+		<form id="addSongsToPlaylistForm" method="post" th:action="@{/AddSongsToPlaylist(playlistId=${playlistId})}">
 		    <div>
 		        <label for="song">Songs:</label>
 		        <br>
