--- a/TIW-PlaylistMusicale/src/main/webapp/WEB-INF/Login.html
+++ b/TIW-PlaylistMusicale/src/main/webapp/WEB-INF/Login.html
@@ -7,19 +7,37 @@
 	<h1>Authentication page</h1>
 	<div class="formdiv">
 		<h2>Sign-in module</h2>
-		<label for="username">Insert username:</label><br>
-        <input type="text" id="username" name="username"><br>
-        <label for="password">Insert password:</label><br>
-        <input type="password" id="password" name="password"><br>
-        <input type="submit" value="Sign in"><br>
+		<form action="#" th:action="@{user/checkPresence}" method="POST">
+			<fieldset>
+				<p> Username: <input type="text" name="username" required /> </p>
+				<p> Password: <input type="password" name="password" required /> </p>
+				<input type="submit" name="Login" value="Sign in">
+			</fieldset>
+			<!-- 
+			 <label for="username">Insert username:</label><br>
+       		<input type="text" id="username" name="username"><br>
+        	<label for="password">Insert password:</label><br>
+        	<input type="password" id="password" name="password"><br>
+        	<input type="submit" value="Sign in"><br>
+        	-->
+        </form>
 	</div>
 	<div class="formdiv">
 		<h2>Sign-up module</h2>
+		<form action="#" th:action="@{/RegisterUser}" method="POST">
+			<fieldset>
+				<p> Select username: <input type="text" name="username" required /> </p>
+				<p> Select password: <input type="password" name="password" required /> </p>
+				<input type="submit" name="Login" value="Sign up">
+			</fieldset>
+		<!--
 		<label for="username">Select username:</label><br>
         <input type="text" id="username" name="username"><br>
         <label for="password">Select password:</label><br>
         <input type="password" id="password" name="password"><br>
 		<input type="submit" value="Sign up"><br>
-	</div>
+		  -->
+		</form>  
+	</div>	
 </body>
 </html>
