--- a/TIW-PlaylistMusicale/src/main/webapp/WEB-INF/Home.html
+++ b/TIW-PlaylistMusicale/src/main/webapp/WEB-INF/Home.html
@@ -21,35 +21,36 @@
             <td th:text="${song.album.genre}"></td>
         </tr>
     </table> -->
-    <h2>Add new song</h2>
-    <form th:action="@{/song/add}" method="post">
-        <label for="title">Title:</label>
-        <input type="text" id="title" name="title" required><br>
-        <label for="album">Album:</label>
-        <div id="album">
-        	<label for="existing">Choose Existing Album</label>
-        	<input type="radio" id="existing" name="album_creation" value="existing">
-        	<div>
-        	    <select id="existingAlbum" name="album" required>
-            		<option value="">-- Choose Existing Album --</option>
-            		<option th:each="album : ${albums}" th:text="${album.title}" th:value="${album.id}"></option>
-        		</select>
-        	</div>
-        	<label for="new">Create new album</label>
-        	<input type="radio" id="new" name="album_creation" value="new">
-        	<div>
-        		<label for="newAlbumTitle">New Album Title:</label>
-        		<input type="text" id="newAlbumTitle" name="newAlbumTitle"><br>
-        		<label for="newAlbumArtist">New Album Artist:</label>
-        		<input type="text" id="newAlbumArtist" name="newAlbumArtist"><br>
-        		<label for="newAlbumYear">New Album Year:</label>
-        		<input type="number" id="newAlbumYear" name="newAlbumYear"><br>
-        		<label for="newAlbumGenre">New Album Genre:</label>
-        		<input type="text" id="newAlbumGenre" name="newAlbumGenre"><br>
-        		<input type="submit" value="Add Song">
-        	</div>
-        </div>
+    <div class="formdiv">
+    <h2>Add new song from existing album</h2>
+    <form action="#" th:action="@{/AddSongExistingAlbum}" method="POST"	enctype="multipart/form-data">
+    	<fieldset>
+    		<p> Title: <input type="text" name="song_title" required /></p>
+    		<p> Audio file: <input type="file" name="audioFile" accept="audio/*" required></p>
+    		<select id="existingAlbum" name="album" required>
+            	<option value="">-- Choose Existing Album --</option>
+            	<option th:each="album : ${albums}" th:text="${album.title}" th:value="${album.id}"></option>
+        	</select>
+    		<input type="submit" name="add_song" value="Add song">
+    	</fieldset>
     </form>
+    </div>
+    
+    <div class="formdiv">
+    <h2>Add new song and new album</h2>
+    <form action="#" th:action="@{/AddSongNewAlbum}" method="post" enctype="multipart/form-data">
+    	<fieldset>
+    		<p> Song title: <input type="text" name="song_title" required /></p>
+    		<p> Audio file: <input type="file" name="audioFile" accept="audio/*" required></p>
+    		<p> Album title: <input type="text" name="album_title" required /></p>
+    		<p> Album artist: <input type="text" name="album_artist" required /></p>
+    		<p> Album year: <input type="number" name="album_year" required /></p>
+    		<p> Album genre: <input type="text" name="album_genre" required /></p>
+    		<p> Album cover: <input type="file" name="album_cover" accept="image/*" required /></p>
+    		<input type="submit" name="add_song" value="Add song">
+    	</fieldset>
+    </form>
+    </div>
     <br>
     <h2>Add new playlist</h2>
     <!-- <form action="select_songs" method="post">
