--- a/TIW-PlaylistMusicale/src/main/webapp/WEB-INF/HomeJS.html
+++ b/TIW-PlaylistMusicale/src/main/webapp/WEB-INF/HomeJS.html
@@ -23,7 +23,7 @@
 						          <a th:href="@{/GoToPlayer(songId=${songId})}" th:text="${entry.key.title}"></a>
 						        </label>
 						      </div>
-						      <img loading="lazy" th:src="${entry.value.image}" th:alt="${entry.value.title}">
+						      <img loading="lazy" th:src="@{/FileHandler(fileName=${entry.value.image})}" th:alt="${entry.value.title}">
 						  </td>
 						</th:block>
 					  </tr>
