--- a/TIW-PlaylistMusicaleJS/src/main/webapp/WEB-INF/Home.html
+++ b/TIW-PlaylistMusicaleJS/src/main/webapp/WEB-INF/Home.html
@@ -1,75 +1,92 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+<html>
 <head>
-    <title>Home page</title>
+<meta charset="UTF-8">
+<title>Insert title here</title>
 </head>
 <body>
-    <h1>Home page</h1>
-   <!-- <table>
-        <tr>
-            <th>Title</th>
-            <th>Album</th>
-            <th>Artist</th>
-            <th>Year</th>
-            <th>Genre</th>
-        </tr>
-        <tr th:each="song : ${playlist}">
-            <td th:text="${song.title}"></td>
-            <td th:text="${song.album.title}"></td>
-            <td th:text="${song.album.artist}"></td>
-            <td th:text="${song.album.year}"></td>
-            <td th:text="${song.album.genre}"></td>
-        </tr>
-    </table> -->
-    <div class="formdiv">
-    <h2>Add new song from existing album</h2>
-    <form action="#" th:action="@{/AddSongExistingAlbum}" method="POST"	enctype="multipart/form-data">
-    	<fieldset>
-    		<p> Title: <input type="text" name="song_title" required /></p>
-    		<p> Audio file: <input type="file" name="audioFile" accept="audio/*" required></p>
-    		<select id="existingAlbum" name="album" required>
-            	<option value="">-- Choose Existing Album --</option>
-            	<option th:each="album : ${albums}" th:text="${album.title}" th:value="${album.id}"></option>
-        	</select>
-    		<input type="submit" name="add_song" value="Add song">
-    	</fieldset>
-    </form>
-    </div>
-    
-    <div class="formdiv">
-    <h2>Add new song and new album</h2>
-    <form action="#" th:action="@{/AddSongNewAlbum}" method="post" enctype="multipart/form-data">
-    	<fieldset>
-    		<p> Song title: <input type="text" name="song_title" required /></p>
-    		<p> Audio file: <input type="file" name="audioFile" accept="audio/*" required></p>
-    		<p> Album title: <input type="text" name="album_title" required /></p>
-    		<p> Album artist: <input type="text" name="album_artist" required /></p>
-    		<p> Album year: <input type="number" name="album_year" required /></p>
-    		<p> Album genre: <input type="text" name="album_genre" required /></p>
-    		<p> Album cover: <input type="file" name="album_cover" accept="image/*" required /></p>
-    		<input type="submit" name="add_song" value="Add song">
-    	</fieldset>
-    </form>
-    </div>
-    <br>
-    <h2>Add new playlist</h2>
-    <!-- <form action="select_songs" method="post">
-     <ul>
-      <% List<String> items = (List<String>) request.getAttribute("items");
-         if (items != null) {
-           for (String item : items) { %>
-             <li>
-               <input type="checkbox" name="select_songs" value="<%= item %>">
-               <%= item %>
-             </li>
-           <% }
-         } %>
-     </ul>
-  </form><br> -->
-     <form action="@{/playlist/add}" method="post">
-     <label for="input_title_playlist">Enter title of playlist:</label><br>
-     <input type="text" id="input_title_playlist" name="playlist_title"><br>
-     <input type="submit" value="Add playlist"><br>
-    </form>
+	<div>
+	    <h1>Playlist</h1>
+	
+		<div th:if="${not #maps.isEmpty(playlistSongsWithAlbum)}">
+			<form id="removeSongsFromPlaylistForm" th:action="@{/RemoveSongsFromPlaylist(playlistId=${playlistId})}" method="post">
+			    <input type="hidden" name="playlistId" th:value="${playlistId}"/>
+			    <table>
+					<tbody>
+					  <tr>
+						<th:block th:each="entry, iter : ${playlistSongsWithAlbum}">
+						  <td  class="playlistSong" hidden>
+						      <div>
+						        <input type="checkbox" name="songIds" th:value="${entry.key.id}"/>
+						        <label for="songIds">
+						          <a th:data-id="${entry.key.id}" th:text="${entry.key.title}"></a>
+						        </label>
+						      </div>
+						      <img loading="lazy" th:src="@{/FileHandler(fileName=${entry.value.image})}" th:alt="${entry.value.title}">
+						  </td>
+						</th:block>
+					  </tr>
+					</tbody>
+			    </table>
+			    <button type="submit">Remove selected songs</button>
+			</form>
+			<div id="previousPlaylistButton">
+		        <a>Previous</a>
+		    </div>
+			
+			<div id="nextPlaylistButton">
+		        <a>Next</a>
+		    </div>
+		</div>
+	
+	    <h2>Add Song to Playlist</h2>
+		<form id="addSongsToPlaylistForm" method="post" th:action="@{/AddSongsToPlaylist(playlistId=${playlistId})}">
+		    <div>
+		        <label for="song">Songs:</label>
+		        <br>
+		        <select id="song"
+		                name="songIds"
+		                multiple>
+		            <option value="">-- Select songs --</option>
+		            <option th:each="song : ${userSongs}"
+		                    th:value="${song.id}"
+		                    th:text="${song.title}"></option>
+		        </select>
+		    </div>
+		    <button type="submit">Add to Playlist</button>
+		</form>
+	</div>
+	<div>
+		<!-- Iterate through each song in the playlist -->
+		<div th:each="entry, iter : ${playlistSongsWithAlbum}">
+			<th:block th:with="song=${entry.key}, album=${entry.value}">
+			    <!-- Hide all other song elements -->
+			    <div th:data-id="${song.id}" class = "playerSong" hidden>
+			        <h1>Song Details</h1>
+			        <!-- Extract the Song and Album from the Map entry -->
+			            <h2 th:text="${song.title}"></h2>
+			            <img th:src="${album.image}" />
+			            <!-- Display other details of the song such as artist, album, year, genre, etc. -->
+			            <p>Artist: <span th:text="${album.interpreter}"></span></p>
+			            <p>Album: <span th:text="${album.title}"></span></p>
+			            <p>Year: <span th:text="${album.publicationYear}"></span></p>
+			            <!-- Add an audio player for song playback -->
+			            <audio preload="none" th:src="${song.audio}" controls></audio>
+			    </div>
+		    </th:block>
+		</div>
+		<div id="previousSongButton">
+		    <a>Previous</a>
+		</div>
+			
+		<div id="nextSongButton">
+		   <a>Next</a>
+		</div>
+	</div>
 </body>
+<script th:src="@{/static/js/Home.js}"></script>
+<script th:src="@{/static/js/Playlist.js}"></script>
+<script th:src="@{/static/js/Song.js}"></script>
+
 </html>
