Solved problem db

--- a/TIW-PlaylistMusicale/src/main/webapp/WEB-INF/Home.html
+++ b/TIW-PlaylistMusicale/src/main/webapp/WEB-INF/Home.html
@@ -34,7 +34,7 @@
             	<option value="Indie"> Indie </option>
             	<option value="Classical"> Classical </option>
         	</select></p>
-    		<p> Audio file: <input type="file" name="audioFile" accept="audio/*" required>
+    		<p> Audio file: <input type="file" name="audioFile" accept="audio/*" required></p>
     		<p><select id="existingAlbum" name="albumId" required>
             	<option value="">-- Choose Existing Album --</option>
             	<option value="album"> Album </option>
