Added context path as global variable in js

--- a/TIW-PlaylistMusicaleJS/src/main/webapp/WEB-INF/Home.html
+++ b/TIW-PlaylistMusicaleJS/src/main/webapp/WEB-INF/Home.html
@@ -6,6 +6,7 @@
 <title>Insert title here</title>
 </head>
 <body>
+	<div style="display:none" id ="contextPath" th:text="@{/}"></div>
 	<div>
 	    <h1>Playlist</h1>
 	
