--- a/TIW-PlaylistMusicale/src/main/webapp/WEB-INF/Login.html
+++ b/TIW-PlaylistMusicale/src/main/webapp/WEB-INF/Login.html
@@ -15,6 +15,7 @@
 			</fieldset>
         </form>
 	</div>
+	
 	<div class="formdiv">
 		<h2>Sign-up module</h2>
 		<form action="#" th:action="@{/RegisterUser}" method="POST">
@@ -25,5 +26,10 @@
 			</fieldset>
 		</form>  
 	</div>	
+	
+	<div class="error" th:if="${errorMessage}">
+    <p th:text="${errorMessage}"></p>
+	</div>
+	
 </body>
 </html>
